portfolio hero added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
   </head>
   <body>
     <div class="container">
-      <h1>Hello</h1>
+      <h2>👋 Hello, I'm</h2>
+      <h1>Nazanin Taghavi</h1>
+      <h3>Front-end developer based in Iran</h3>
+      <a href="#" class="contact-button">Contact me</a>
     </div>
   </body>
 </html>
