--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h2>👋 Hello, I'm</h2>
       <h1>Nazanin Taghavi</h1>
       <h3>Front-end developer based in Iran</h3>
-      <a href="#" class="contact-button">Contact me</a>
+      <a href="#" class="contact-button mt-5">Contact me</a>
     </div>
   </body>
 </html>
