--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Poppins:wght@400;500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins&display=swap"
       rel="stylesheet"
     />
     <link
@@ -35,10 +31,12 @@
   </head>
   <body>
     <div class="container">
-      <h2>👋 Hello, I'm</h2>
-      <h1>Nazanin Taghavi</h1>
-      <h3>Front-end developer based in Iran</h3>
-      <a href="#" class="contact-button mt-5">Contact me</a>
+      <div class="hero">
+        <h2>👋 Hello, I'm</h2>
+        <h1>Nazanin Taghavi</h1>
+        <h3>Front-end developer based in Iran</h3>
+        <a href="#" class="contact-button mt-5">Contact me</a>
+      </div>
     </div>
   </body>
 </html>
