--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="hero">
       <p>👋 Hello, I'm</p>
       <h1>Nazanin Taghavi</h1>
-      <h2 class="mb-5">Front-end developer based in Portugal</h2>
+      <h2 class="mb-5">Front-end developer based in Iran</h2>
       <div>
         <a href="#" class="btn btn-branding">Contact me</a>
       </div>
