added and styled homepage content

--- a/index.html
+++ b/index.html
@@ -30,12 +30,72 @@
     ></script>
   </head>
   <body>
-    <div class="hero">
-      <p>👋 Hello, I'm</p>
-      <h1>Nazanin Taghavi</h1>
-      <h2 class="mb-5">Front-end developer based in Iran</h2>
-      <div>
-        <a href="#" class="btn btn-branding">Contact me</a>
+    <div class="container">
+      <div class="hero">
+        <p>👋 Hello, I'm</p>
+        <h1>Nazanin Taghavi</h1>
+        <h2 class="mb-5">Front-end developer based in Iran</h2>
+        <div>
+          <a href="#" class="btn btn-branding">Contact me</a>
+        </div>
+      </div>
+      <div class="projects mt-5">
+        <p class="text-center">
+          Featured Project which my best projects be choice to show
+        </p>
+      </div>
+      <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
+        <img
+          src="https://8xjze.csb.app/images/yogurt.png"
+          class="img-fluid rounded col-md-6 d-md-block d-none"
+          alt="yogurt app"
+        />
+        <div class="project-text m-5">
+          <h2>Yogurt Project</h2>
+          <p class="paraf">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-light">Learn more</a>
+        </div>
+      </div>
+
+      <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
+        <div class="project-text m-5">
+          <h2>Weather Project</h2>
+          <p class="paraf">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-light">Learn more</a>
+        </div>
+        <img
+          src="https://8xjze.csb.app/images/weather.png"
+          class="img-fluid rounded col-md-6 d-md-block d-none"
+          alt="yogurt app"
+        />
+      </div>
+
+      <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
+        <img
+          src="https://8xjze.csb.app/images/dictionary.png"
+          class="img-fluid rounded col-md-6 d-md-block d-none"
+          alt="yogurt app"
+        />
+        <div class="project-text m-5">
+          <h2>Dictionary Project</h2>
+          <p class="paraf">
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts. Separated they
+            live in Bookmarksgrove right at the coast of the Semantics, a large
+            language ocean. A small river named Duden flows by
+          </p>
+          <a href="#" class="btn btn-branding-light">Learn more</a>
+        </div>
       </div>
     </div>
   </body>
