--- a/index.html
+++ b/index.html
@@ -25,76 +25,103 @@
       crossorigin="anonymous"
     ></script>
     <script
-      src="https://kit.fontawesome.com/ddc3ee268a.js"
+      src="https://kit.fontawesome.com/717c74631a.js"
       crossorigin="anonymous"
     ></script>
   </head>
   <body>
     <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Nazanin Taghavi</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About me</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact me</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="hero">
         <p>👋 Hello, I'm</p>
         <h1>Nazanin Taghavi</h1>
         <h2 class="mb-5">Front-end developer based in Iran</h2>
         <div>
-          <a href="#" class="btn btn-branding">Contact me</a>
+          <a href="#" class="btn btn-branding m-3">Contact me</a>
+          <a href="#" class="btn btn-branding-light m-3">About me</a>
         </div>
       </div>
-      <div class="projects mt-5">
-        <p class="text-center">
-          Featured Project which my best projects be choice to show
-        </p>
-      </div>
-      <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
-        <img
-          src="https://8xjze.csb.app/images/yogurt.png"
-          class="img-fluid rounded col-md-6 d-md-block d-none"
-          alt="yogurt app"
-        />
-        <div class="project-text m-5">
-          <h2>Yogurt Project</h2>
-          <p class="paraf">
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <a href="#" class="btn btn-branding-light">Learn more</a>
+      <div class="projects">
+        <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
+          <img
+            src="./images/yoga.png"
+            class="img-fluid rounded col-md-6 d-md-block d-none"
+            alt="yogurt app"
+          />
+          <div class="project-text m-5">
+            <h2>Yoga Project</h2>
+            <p>
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-light">Learn more</a>
+          </div>
         </div>
-      </div>
 
-      <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
-        <div class="project-text m-5">
-          <h2>Weather Project</h2>
-          <p class="paraf">
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <a href="#" class="btn btn-branding-light">Learn more</a>
+        <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
+          <div class="project-text m-5">
+            <h2>Weather Project</h2>
+            <p>
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-light">Learn more</a>
+          </div>
+          <img
+            src="./images/weather.png"
+            class="img-fluid rounded col-md-6 d-md-block d-none"
+            alt="weather app"
+          />
         </div>
-        <img
-          src="https://8xjze.csb.app/images/weather.png"
-          class="img-fluid rounded col-md-6 d-md-block d-none"
-          alt="yogurt app"
-        />
-      </div>
 
-      <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
-        <img
-          src="https://8xjze.csb.app/images/dictionary.png"
-          class="img-fluid rounded col-md-6 d-md-block d-none"
-          alt="yogurt app"
-        />
-        <div class="project-text m-5">
-          <h2>Dictionary Project</h2>
-          <p class="paraf">
-            Far far away, behind the word mountains, far from the countries
-            Vokalia and Consonantia, there live the blind texts. Separated they
-            live in Bookmarksgrove right at the coast of the Semantics, a large
-            language ocean. A small river named Duden flows by
-          </p>
-          <a href="#" class="btn btn-branding-light">Learn more</a>
+        <div class="d-md-flex flex-row justify-content-md-evenly mb-3 mt-3">
+          <img
+            src="./images/yogurt.png"
+            class="img-fluid rounded col-md-6 d-md-block d-none"
+            alt="yogurt app"
+          />
+          <div class="project-text m-5">
+            <h2>Yogurt Project</h2>
+            <p>
+              Far far away, behind the word mountains, far from the countries
+              Vokalia and Consonantia, there live the blind texts. Separated
+              they live in Bookmarksgrove right at the coast of the Semantics, a
+              large language ocean. A small river named Duden flows by
+            </p>
+            <a href="#" class="btn btn-branding-light">Learn more</a>
+          </div>
         </div>
       </div>
     </div>
