--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About me</a>
+                <a class="nav-link" href="./about.html">About me</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contact me</a>
@@ -66,7 +66,7 @@
         <h2 class="mb-5">Front-end developer based in Iran</h2>
         <div>
           <a href="#" class="btn btn-branding m-3">Contact me</a>
-          <a href="#" class="btn btn-branding-light m-3">About me</a>
+          <a href="./about.html" class="btn btn-branding-light m-3">About me</a>
         </div>
       </div>
       <div class="projects">
