--- a/work.html
+++ b/work.html
@@ -4,28 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Work</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&display=swap"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700&family=Poppins:wght@400;500&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl"
       crossorigin="anonymous"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+
     <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
       crossorigin="anonymous"
     ></script>
     <script
@@ -34,6 +28,51 @@
     ></script>
   </head>
   <body>
-    <div class="container"></div>
+    <div class="container">
+      <div class="works">
+        <h1>Take a look at what I've been working on!</h1>
+        <div class="row mt-5 mb-3">
+          <div class="rounded work col-sm-6">
+            <img
+              src="./images/yogurt.png"
+              alt="yogurt"
+              class="img-fluid rounded"
+            />
+            <h5 class="card-title mt-3">Yogurt Project</h5>
+            <p class="card-text mb-3">Built with HTML and CSS</p>
+          </div>
+          <div class="rounded work col-sm-6">
+            <img
+              src="./images/weather.png"
+              alt="yogurt"
+              class="img-fluid rounded"
+            />
+            <h5 class="card-title mt-3">Weather Project</h5>
+            <p class="card-text mb-3">Built with HTML, CSS and JavaScript</p>
+          </div>
+        </div>
+
+        <div class="row mt-3">
+          <div class="rounded work col-sm-6">
+            <img
+              src="./images/dictionary.png"
+              alt="dictionary"
+              class="img-fluid rounded"
+            />
+            <h5 class="card-title mt-3">Dictionary Project</h5>
+            <p class="card-text mb-3">Built with HTML, CSS with React</p>
+          </div>
+          <div class="rounded work col-sm-6">
+            <img
+              src="./images/translation.png"
+              alt="yogurt"
+              class="img-fluid rounded"
+            />
+            <h5 class="card-title mt-3">Translation Project</h5>
+            <p class="card-text mb-3">Built with HTML, CSS with React</p>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
