linked works to about.html

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             everything is well explained, homework and deadlines are good for
             keep focus
           </p>
-          <a href="#" class="btn btn-branding">See My Projects</a>
+          <a href="./work.html" class="btn btn-branding">See My Projects</a>
         </div>
         <img
           src="./images/nazanin2.jpg"
