--- a/work.html
+++ b/work.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="works">
+      <div class="works mt-5">
         <h1>Take a look at what I've been working on!</h1>
         <div class="row mt-5 mb-3">
           <div class="rounded work col-sm-6">
