--- a/work.html
+++ b/work.html
@@ -29,8 +29,8 @@
   </head>
   <body>
     <div class="container">
-      <div class="works mt-5">
-        <h1>Take a look at what I've been working on!</h1>
+      <div class="works">
+        <h1 class="mt-5">Take a look at what I've been working on!</h1>
         <div class="row mt-5 mb-3">
           <div class="rounded work col-sm-6">
             <img
