added contact me

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a class="nav-link" href="./about.html">About me</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact me</a>
+                <a class="nav-link" href="./contact.html">Contact me</a>
               </li>
             </ul>
           </div>
@@ -65,7 +65,7 @@
         <h1>Nazanin Taghavi</h1>
         <h2 class="mb-5">Front-end developer based in Iran</h2>
         <div>
-          <a href="#" class="btn btn-branding m-3">Contact me</a>
+          <a href="./contact.html" class="btn btn-branding m-3">Contact me</a>
           <a href="./about.html" class="btn btn-branding-light m-3">About me</a>
         </div>
       </div>
