--- a/index.html
+++ b/index.html
@@ -31,36 +31,37 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light bg-white">
+      <nav class="navbar navbar-expand navbar-light bg-white">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Nazanin Taghavi</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./about.html">About me</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="./contact.html">Contact me</a>
-              </li>
-            </ul>
-          </div>
+          <a class="navbar-brand" href="#"
+            ><img
+              src="./images/logo.png"
+              class="d-none d-md-block d-lg-block"
+              alt="sheCodes logo"
+              style="max-width: 150px" /><img
+              src="./images/logo-small.jpg"
+              alt="small sheCodes logo"
+              class="d-none d-sm-block d-xs-block d-md-none"
+              style="max-width: 50px"
+          /></a>
+
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./about.html">About me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./contact.html">Contact me</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./work.html">Work</a>
+            </li>
+          </ul>
         </div>
       </nav>
-      <div class="hero">
+      <div class="hero rounded">
         <p>👋 Hello, I'm</p>
         <h1>Nazanin Taghavi</h1>
         <h2 class="mb-5">Front-end developer based in Iran</h2>
