--- a/index.html
+++ b/index.html
@@ -31,35 +31,29 @@
   </head>
   <body>
     <div class="container">
-      <nav class="navbar navbar-expand navbar-light bg-white">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#"
-            ><img
-              src="./images/logo.png"
-              class="d-none d-md-block d-lg-block"
-              alt="sheCodes logo"
-              style="max-width: 150px" /><img
-              src="./images/logo-small.jpg"
-              alt="small sheCodes logo"
-              class="d-none d-sm-block d-xs-block d-md-none"
-              style="max-width: 50px"
-          /></a>
-
-          <ul class="navbar-nav">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./about.html">About me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact me</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./work.html">Work</a>
-            </li>
-          </ul>
-        </div>
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html"> About</a>
+          </li>
+          <li>
+            <a href="/work.html"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html"> Contact</a>
+          </li>
+        </ul>
       </nav>
       <div class="hero rounded">
         <p>👋 Hello, I'm</p>
