--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact me</title>
+    <link rel="icon" href="./images/logo-small.jpg" type="image/icon type">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -31,13 +32,29 @@
     <div class="container contact-us">
       <h1 class="mt-5 mb-5">Let's get in touch!</h1>
       <h3 class="mt-5">Email</h3>
-      <a href="mailto:n.taghavi168@gmail.com" title="Nazanin Email" class="mb-5">n.taghavi168@gmail.com</a>
+      <a
+        href="mailto:n.taghavi168@gmail.com"
+        title="Nazanin Email"
+        target="_blank"
+        class="mb-5"
+        >n.taghavi168@gmail.com</a
+      >
       <h3 class="mt-5">Twitter</h3>
-      <a href="http://www.twitter.com/nazaninHerself" title="Nazanin Twitter" class="mb-5">@nazaninHerself</a>
+      <a
+        href="http://www.twitter.com/nazaninHerself"
+        target="_blank"
+        title="Nazanin Twitter"
+        class="mb-5"
+        >@nazaninHerself</a
+      >
       <h3 class="mt-5">Instagram</h3>
-      <a href="http://www.instagram.com/nazanin_tqv" title="Nazanin Instagram" class="mb-5">@nazanin_tqv</a>
-
-
+      <a
+        href="http://www.instagram.com/nazanin_tqv"
+        target="_blank"
+        title="Nazanin Instagram"
+        class="mb-5"
+        >@nazanin_tqv</a
+      >
     </div>
   </body>
 </html>
