--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nazanin</title>
-
+    <link rel="icon" href="./images/logo-small.jpg" type="image/icon type" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -117,6 +117,44 @@
             </p>
             <a href="#" class="btn btn-branding-light">Learn more</a>
           </div>
+        </div>
+      </div>
+      <div
+        class="footer d-md-flex flex-row justify-content-between rounded p-3 mt-5 mb-5 d-none d-md-block"
+      >
+        <div class="p-3">
+          <h2>Work Inquiry</h2>
+          <p>Let's work together</p>
+        </div>
+        <div class="p-3">
+          <a
+            class="btn btn-branding"
+            style="margin: 10px auto"
+            href="./contact.html"
+            >Contact me</a
+          >
+        </div>
+      </div>
+      <div class="footer2">
+        <a href="mailto:n.taghavi168@gmail.com">n.taghavi168@gmail.com</a>
+        <div
+          class="social d-flex flex-row justify-content-evenly rounded p-3 mt-3 mb-5"
+        >
+          <a class="btn" href="https://github.com/ntaghavi/" target="_blank"
+            ><i class="icon fa-brands fa-github"></i
+          ></a>
+          <a
+            class="btn"
+            href="https://www.instagram.com/nazanin_tqv"
+            target="_blank"
+            ><i class="icon fa-brands fa-instagram"></i
+          ></a>
+          <a
+            class="btn"
+            href="https://www.twitter.com/nazaninHerself/"
+            target="_blank"
+            ><i class="icon fa-brands fa-twitter"></i
+          ></a>
         </div>
       </div>
     </div>
