fixed icon margins

--- a/index.html
+++ b/index.html
@@ -138,19 +138,19 @@
       <div class="footer2">
         <a href="mailto:n.taghavi168@gmail.com">n.taghavi168@gmail.com</a>
         <div
-          class="social d-flex flex-row justify-content-evenly rounded p-3 mt-3 mb-5"
+          class="social d-flex flex-row justify-content-center rounded p-3 mt-3 mb-5"
         >
-          <a class="btn" href="https://github.com/ntaghavi/" target="_blank"
+          <a class="btn m-3" href="https://github.com/ntaghavi/" target="_blank"
             ><i class="icon fa-brands fa-github"></i
           ></a>
           <a
-            class="btn"
+            class="btn m-3"
             href="https://www.instagram.com/nazanin_tqv"
             target="_blank"
             ><i class="icon fa-brands fa-instagram"></i
           ></a>
           <a
-            class="btn"
+            class="btn m-3"
             href="https://www.twitter.com/nazaninHerself/"
             target="_blank"
             ><i class="icon fa-brands fa-twitter"></i
