--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nazanin</title>
+    <title>Nazanin Taghavi</title>
+    <meta
+      name="description"
+      content="This a website presenting Nazanin Taghavi 's Portfolio"
+    />
+    <meta name="keywords" content="Nazanin" />
+    <meta name="keywords" content="Taghavi" />
+    <meta name="keywords" content="Portfolio" />
+    <meta name="keywords" content="Front-end developer" />
     <link rel="icon" href="./images/logo-small.jpg" type="image/icon type" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -45,13 +53,17 @@
             <a href="/"> Home</a>
           </li>
           <li>
-            <a href="/about.html"> About</a>
+            <a href="/about.html" title="Nazanin's Portfolio - About me">
+              About</a
+            >
           </li>
           <li>
-            <a href="/work.html"> Work</a>
+            <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
           </li>
           <li>
-            <a href="/contact.html"> Contact</a>
+            <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
+              Contact</a
+            >
           </li>
         </ul>
       </nav>
@@ -129,6 +141,7 @@
         <div class="p-3">
           <a
             class="btn btn-branding"
+            title="Nazanin's Portfolio - contact page"
             style="margin: 10px auto"
             href="./contact.html"
             >Contact me</a
@@ -136,21 +149,29 @@
         </div>
       </div>
       <div class="footer2">
-        <a href="mailto:n.taghavi168@gmail.com">n.taghavi168@gmail.com</a>
+        <a href="mailto:n.taghavi168@gmail.com" title="Nazanin's Email"
+          >n.taghavi168@gmail.com</a
+        >
         <div
           class="social d-flex flex-row justify-content-center rounded p-3 mt-3 mb-5"
         >
-          <a class="btn m-3" href="https://github.com/ntaghavi/" target="_blank"
+          <a
+            class="btn m-3"
+            title="Nazanin's GitHub"
+            href="https://github.com/ntaghavi/"
+            target="_blank"
             ><i class="icon fa-brands fa-github"></i
           ></a>
           <a
             class="btn m-3"
+            title="Nazanin's Instagram"
             href="https://www.instagram.com/nazanin_tqv"
             target="_blank"
             ><i class="icon fa-brands fa-instagram"></i
           ></a>
           <a
             class="btn m-3"
+            title="Nazanin's twitter"
             href="https://www.twitter.com/nazaninHerself/"
             target="_blank"
             ><i class="icon fa-brands fa-twitter"></i
