--- a/about.html
+++ b/about.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About Me</title>
-    <link rel="icon" href="./images/logo-small.jpg" type="image/icon type">
+    <meta
+      name="description"
+      content="Know more about Nazanin Taghavi in this page."
+    />
+    <meta name="keywords" content="about Nazanin Taghavi" />
+    <meta name="keywords" content="Front-end">
+    <meta name="keywords" content="developer">
+    <link rel="icon" href="./images/logo-small.jpg" type="image/icon type" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
