--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact me</title>
-    <link rel="icon" href="./images/logo-small.jpg" type="image/icon type">
+    <meta name="description" content="Contact Nazanin Taghavi" />
+    <meta name="keywords" content="Nazanin" />
+    <meta name="keywords" content="Taghavi" />
+    <meta name="keywords" content="contact" />
+    <meta name="keywords" content="Front-end" />
+    <link rel="icon" href="./images/logo-small.jpg" type="image/icon type" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
