added project github repo

--- a/index.html
+++ b/index.html
@@ -178,6 +178,12 @@
           ></a>
         </div>
       </div>
+      <div class="source">
+        <p>
+          To view this project's GitHub repository, Click
+          <a href="https://github.com/ntaghavi/portfolio">Here</a>!
+        </p>
+      </div>
     </div>
   </body>
 </html>
