added navbar to all pages

--- a/contact.html
+++ b/contact.html
@@ -34,32 +34,62 @@
     ></script>
   </head>
   <body>
-    <div class="container contact-us">
-      <h1 class="mt-5 mb-5">Let's get in touch!</h1>
-      <h3 class="mt-5">Email</h3>
-      <a
-        href="mailto:n.taghavi168@gmail.com"
-        title="Nazanin Email"
-        target="_blank"
-        class="mb-5"
-        >n.taghavi168@gmail.com</a
-      >
-      <h3 class="mt-5">Twitter</h3>
-      <a
-        href="http://www.twitter.com/nazaninHerself"
-        target="_blank"
-        title="Nazanin Twitter"
-        class="mb-5"
-        >@nazaninHerself</a
-      >
-      <h3 class="mt-5">Instagram</h3>
-      <a
-        href="http://www.instagram.com/nazanin_tqv"
-        target="_blank"
-        title="Nazanin Instagram"
-        class="mb-5"
-        >@nazanin_tqv</a
-      >
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="Nazanin's Portfolio - About me">
+              About</a
+            >
+          </li>
+          <li>
+            <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
+              Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <div class="contact-us">
+        <h1 class="mt-5 mb-5">Let's get in touch!</h1>
+        <h3 class="mt-5">Email</h3>
+        <a
+          href="mailto:n.taghavi168@gmail.com"
+          title="Nazanin Email"
+          target="_blank"
+          class="mb-5"
+          >n.taghavi168@gmail.com</a
+        >
+        <h3 class="mt-5">Twitter</h3>
+        <a
+          href="http://www.twitter.com/nazaninHerself"
+          target="_blank"
+          title="Nazanin Twitter"
+          class="mb-5"
+          >@nazaninHerself</a
+        >
+        <h3 class="mt-5">Instagram</h3>
+        <a
+          href="http://www.instagram.com/nazanin_tqv"
+          target="_blank"
+          title="Nazanin Instagram"
+          class="mb-5"
+          >@nazanin_tqv</a
+        >
+      </div>
     </div>
   </body>
 </html>
