--- a/about.html
+++ b/about.html
@@ -9,8 +9,8 @@
       content="Know more about Nazanin Taghavi in this page."
     />
     <meta name="keywords" content="about Nazanin Taghavi" />
-    <meta name="keywords" content="Front-end">
-    <meta name="keywords" content="developer">
+    <meta name="keywords" content="Front-end" />
+    <meta name="keywords" content="developer" />
     <link rel="icon" href="./images/logo-small.jpg" type="image/icon type" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
@@ -37,6 +37,34 @@
   </head>
   <body>
     <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="Nazanin's Portfolio - About me">
+              About</a
+            >
+          </li>
+          <li>
+            <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
+              Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
       <div class="d-md-flex flex-row justify-content-md-evenly mt-3 mb-5 p-3">
         <div class="about-text col-md-6 m-3">
           <h1>Hi I am Nazanin Taghavi</h1>
