--- a/work.html
+++ b/work.html
@@ -35,6 +35,34 @@
   </head>
   <body>
     <div class="container">
+      <nav class="d-flex justify-content-between">
+        <a href="/">
+          <img src="images/logo.png" class="logo d-none d-md-block" alt="" />
+          <img
+            src="images/logo-small.jpg"
+            class="logo d-block d-md-none"
+            alt=""
+          />
+        </a>
+        <ul>
+          <li class="active">
+            <a href="/"> Home</a>
+          </li>
+          <li>
+            <a href="/about.html" title="Nazanin's Portfolio - About me">
+              About</a
+            >
+          </li>
+          <li>
+            <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
+          </li>
+          <li>
+            <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
+              Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
       <div class="works">
         <h1 class="mt-5">Take a look at what I've been working on!</h1>
         <div class="row mt-5 mb-3">
