fixed active nav links

--- a/about.html
+++ b/about.html
@@ -47,11 +47,15 @@
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/"> Home</a>
           </li>
           <li>
-            <a href="/about.html" title="Nazanin's Portfolio - About me">
+            <a
+              class="active"
+              href="/about.html"
+              title="Nazanin's Portfolio - About me"
+            >
               About</a
             >
           </li>
