--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/"> Home</a>
           </li>
           <li>
@@ -57,7 +57,11 @@
             <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
           </li>
           <li>
-            <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
+            <a
+              class="active"
+              href="/contact.html"
+              title="Nazanin's Portfolio - Contact me"
+            >
               Contact</a
             >
           </li>
