--- a/work.html
+++ b/work.html
@@ -45,7 +45,7 @@
           />
         </a>
         <ul>
-          <li class="active">
+          <li>
             <a href="/"> Home</a>
           </li>
           <li>
@@ -54,7 +54,13 @@
             >
           </li>
           <li>
-            <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
+            <a
+              class="active"
+              href="/work.html"
+              title="Nazanin's Portfolio - works"
+            >
+              Work</a
+            >
           </li>
           <li>
             <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
