fixed active nav-link

--- a/about.html
+++ b/about.html
@@ -50,12 +50,8 @@
           <li>
             <a href="/"> Home</a>
           </li>
-          <li>
-            <a
-              class="active"
-              href="/about.html"
-              title="Nazanin's Portfolio - About me"
-            >
+          <li class="active">
+            <a href="/about.html" title="Nazanin's Portfolio - About me">
               About</a
             >
           </li>
