--- a/contact.html
+++ b/contact.html
@@ -56,12 +56,8 @@
           <li>
             <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
           </li>
-          <li>
-            <a
-              class="active"
-              href="/contact.html"
-              title="Nazanin's Portfolio - Contact me"
-            >
+          <li class="active">
+            <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
               Contact</a
             >
           </li>
