--- a/work.html
+++ b/work.html
@@ -53,14 +53,8 @@
               About</a
             >
           </li>
-          <li>
-            <a
-              class="active"
-              href="/work.html"
-              title="Nazanin's Portfolio - works"
-            >
-              Work</a
-            >
+          <li class="active">
+            <a href="/work.html" title="Nazanin's Portfolio - works"> Work</a>
           </li>
           <li>
             <a href="/contact.html" title="Nazanin's Portfolio - Contact me">
